Fix some usages of deprecation